Bug 1279842 - Explicitly escape markup instead of using generic HTML escape function. r=m_kato, a=ritu

MozReview-Commit-ID: 2vk8lffmDh4